WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257052
Fix CSS scrollbar width interaction with legacy scrollbar pseudos
https://bugs.webkit.org/show_bug.cgi?id=257052
Summary
Fix CSS scrollbar width interaction with legacy scrollbar pseudos
Luke Warlow
Reported
2023-05-19 14:21:12 PDT
This bug will track how CSS that has both scrollbar-width (and probably in future scrollbar-color) and ::-webkit-scrollbar styles works. Chromiums implementation makes the standard properties take precedence over the legacy pseudos so this behaviour should be matched.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-26 14:22:15 PDT
<
rdar://problem/109905135
>
Luke Warlow
Comment 2
2023-05-28 05:04:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14440
EWS
Comment 3
2023-06-13 11:51:12 PDT
Committed
265129@main
(964948660ae0): <
https://commits.webkit.org/265129@main
> Reviewed commits have been landed. Closing PR #14440 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug